<resources>
    <string name="app_name">Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_booking">HotelBooking.com</string>
    <string name="hello_login">Please login\nTo start researching options</string>
    <string name="hello_register">Your New Account credentials</string>
    <string name="b_Letter">B.</string>
    <string name="email">Input your email</string>
    <string name="password">Input your password</string>
    <string name="login">Login</string>
    <string name="registerMe">Register me</string>
    <string name="register">I don’t have an account\n(register me)</string>
    <string name="fragment_specific_hotel">Hotel Name</string>
    <string name="delete">Delete</string>
    <string name="pricePerNight">%1$d  per night</string>
    <string name="create_reservation">Create reservation</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="emailChange">Input new email</string>
    <string name="accountDeleteConfirm">Confirm account delete</string>
    <string name="accountToDeleteInfo1">Account with email
</string>
    <string name="accountToDeleteInfo2">will be permanently deleted</string>
</resources>